fixing alignment and font code for IE

--- a/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
+++ b/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
@@ -1438,9 +1438,9 @@ position: static
     .yamm-fw .dropdown-menu{min-width:970px;padding:10px 0;}
 }
 .ie8 .yamm-fw ul.topics li a i{width:70px;}
-.ie8 .yamm-fw .dropdown-menu{min-width:970px;left:-511px !important;padding:10px 0;}
-.ie9 .yamm-fw .dropdown-menu{min-width:970px;left:-511px !important;padding:10px 0;}
-.ie10 .yamm-fw .dropdown-menu{min-width:970px;left:-511px !important;padding:10px 0;}
+.ie8 .yamm-fw .dropdown-menu{min-width:970px;padding:10px 0;}
+.ie9 .yamm-fw .dropdown-menu{min-width:970px;padding:10px 0;}
+.ie10 .yamm-fw .dropdown-menu{min-width:970px;padding:10px 0;}
 #menu-primary-navigation ul.topics{
     text-align: center;
 }
